--- a/style.css
+++ b/style.css
@@ -1194,10 +1194,11 @@ textarea {
 	height:102px;
 	width:100%;
 }
-insta-container .row{
+#insta-container .row{
 	margin-left: auto!important;
 	margin-right: auto!important;
 	padding-bottom:2rem;
+	height:100%;
 }
 .insta-img-thumbnail{
 	transition: 0.3s;
