--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ html {
 :root{
 	/* Envoke any variable with 'var(--[var])', eg 'var(--yellow) */
 	--yellow: #FFDF50;
+	--cream: #ECB784;
 	--orange: #F67225;
 	--blue: #0B89E6;
 	--black: #1a1717;
@@ -939,6 +940,11 @@ textarea {
 		text-decoration: none;
 	}
 }
+.navbar-toggler
+{
+	color: var(--hpink)!important;
+    background-color: white!important;
+}
 
 /* Footer */
 .footer-cheight{
@@ -1083,6 +1089,17 @@ textarea {
 	color: #FFFFFF;
 	text-shadow: 5px 5px 4px var(--shadow);
 }
+@media (min-width: 992px){
+	.h-lg-100{
+		height:100%!important;
+	}
+}
+@media (min-width: 768px){
+	.h-md-50{
+		height:50%!important;
+	}
+}
+
 .spinitron{
 	font-family: 'Europa Grotesk SH';
 	color: white;
@@ -1108,11 +1125,6 @@ textarea {
 	text-shadow: 3px 3px 2px rgba(253,12,114, 0.5);
 }
 #show-upcoming{
-	font-family: 'Europa Grotesk SH';
-	color: white;
-	display:flex;
-	padding-bottom:40px;
-    text-shadow: 3px 3px 1px var(--shadow);
 	font-size:175%;
 	transition: 0.3s;
 	cursor:pointer;
@@ -1125,9 +1137,8 @@ textarea {
 	transform: scale(1.1, 1.1) translate(0px, 0px);
 }
 
-}
 	/* Need to support 322px lowest width. This @media section ensures no text overlap*/
-@media (min-width:394px){
+@media (min-width:940px){
 	.spinitron{
 		padding-top:18px;
 		padding-bottom:0px;
@@ -1216,7 +1227,7 @@ textarea {
 	height:102px;
 	width:100%;
 }
-insta-container .row{
+#insta-container .row{
 	margin-left: auto!important;
 	margin-right: auto!important;
 	padding-bottom:2rem;
@@ -1258,11 +1269,101 @@ insta-container .row{
 	margin-top: 6em;
 	margin-bottom: 6em;
 }
-#playing-now{
+
+#played-recent{
 	background-color: var(--transblack1);
 }
-#playing-next{
+.recent-date{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 500;
+}
+.recent-artist{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 600;
+	font-style:normal;
+}
+.recent-song{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 600;
+	font-style: italic;
+}
+
+#playing-next-cont{
 	background-color: var(--transblack1);
+	max-height: 936px;
+}
+#playing-next{
+	overflow-y: scroll;
+	max-height: 673px;
+    overflow-x: hidden;
+}
+#playing-next::-webkit-scrollbar{
+	width:8px;
+}
+#playing-next::-webkit-scrollbar-track-piece{
+	background-color:#BCB9AC;
+	border-radius:10px;
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+}
+#playing-next::-webkit-scrollbar-button{
+	visibility:hidden;
+	height:30px;
+}
+#playing-next::-webkit-scrollbar-thumb{
+	background-color:var(--yellow);
+	width:8px;
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+	border-radius:10px;
+}
+#spin-upcoming{
+	padding-right: 100px;
+	padding-left: 70px;
+}
+.next-time{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 500;
+}
+.next-show{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 600;
+	font-style: italic;
+}
+.next-show a{
+	text-decoration: none;
+
+}
+.next-with{
+	padding-left:5px;
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 600;
+	font-style:normal;
+}
+.next-dj{
+	font-family: 'Europa Grotesk SH';
+	color: white;
+	font-size:32px;
+	font-weight: 600;
+	font-style:normal;
+}
+hr {
+	border: 2.5px dashed var(--cream);
+	background-color: rgba(0,0,0,0);
+	width: 100%;
+	border-radius: 100px;
+	height:0;
+	opacity:1;
 }
 
 /* Blog Page
