--- a/style.css
+++ b/style.css
@@ -870,29 +870,20 @@ textarea {
 
 /* Background, Navbar, Footer 
 -------------------------------------------- */
-#loader {
-	position: absolute;
-	left: calc(50% - 125px);
-	top: calc(50% - 127px);
-	z-index: 1;
-	content:url("img/logos/sticker-record.svg")!important;
-	animation-name: spinning;
-	animation-duration: 4s;
-	animation-iteration-count: infinite;
-	/* linear | ease | ease-in | ease-out | ease-in-out */
-	animation-timing-function: linear;
-}
 .gifbg{
-	background-image:url('img/gif/backgroundflip.gif');
 	background-repeat:repeat-y;
 	background-size: cover;
+
 	height: 100vh;
 	padding:0;
 	margin:0;
- }
- /* .thegif{
+}
+.bgtemp{
+	background:#FF4A6B url('img/gif/tempbg.png');
+}
+.thegif{
 	background-image:url('img/gif/backgroundflip.gif');
- } */
+ }
 .navbar-cheight{
 	height: 83px;
 }
