--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ h1 {
 	letter-spacing: 0%;
 	text-decoration: none;
 	color: white;
+	text-shadow: 0px 4px 4px var(--shadow);
 }
 
 h2{
@@ -1467,6 +1468,7 @@ hr {
 
 /* Sports Broadcast 
 --------------------------------------------- */
+
 .event-overall{
 	font-family:"Porkys";
 	font-size: 32PX;
@@ -1475,11 +1477,17 @@ hr {
 	padding-bottom:32px;
 	text-shadow: 0px 4px 4px var(--shadow);
 }
-#schedule-game{
+#tabs p{
+	font-size:clamp(1.5vh, 1.5vh, 3vh)
 	
 }
 .schedule-game span{
-	font-size: 1.6vw;
+	font-size: 2.5vw;
+}
+@media(max-width:772px){
+	.schedule-game span{
+		font-size: 3.5vw;
+	}
 }
 .game-date{
 	color: white;
@@ -1494,7 +1502,6 @@ hr {
 .game-location{
 	color: white;
 	font-family: "Europa Grotesk SH";
-	font-size: clamp(1rem, 2.5vw, 2rem); 
 	white-space: nowrap;
 }
 .game-result{
