--- a/style.css
+++ b/style.css
@@ -1232,6 +1232,8 @@ textarea {
 .play-button{
 	width: 186px;
     height: 186px;
+	padding-right: 12px;
+    padding-top: 10px;
 }
 .play-button2{
 	content:url("img/logos/playbutton.png");
@@ -1352,7 +1354,7 @@ textarea {
 }
 #spin-recent::-webkit-scrollbar-button{
 	visibility:hidden;
-	height:30px;
+	height:0px;
 }
 #spin-recent::-webkit-scrollbar-thumb{
 	background-color:var(--yellow);
@@ -1478,8 +1480,13 @@ hr {
 	text-shadow: 0px 4px 4px var(--shadow);
 }
 #tabs p{
-	font-size:clamp(1.5vh, 1.5vh, 3vh)
-	
+	font-size:1.5vh;
+}
+
+@media(min-width: 1400px){
+	#tabs p{
+		font-size:3vh;
+	}
 }
 .schedule-game span{
 	font-size: 2.5vw;
@@ -1511,6 +1518,30 @@ hr {
 }
 .sports-tab{
 	cursor: pointer;
+}
+
+.tab-pink{
+	color: var(--lpink);
+	text-shadow: 0px 2px 2px var(--shadow);
+}
+
+#tabs::-webkit-scrollbar{
+	width:4px;
+}
+#tabs::-webkit-scrollbar-track-piece{
+	background-color:#BCB9AC;
+	border-radius:10px;
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+}
+#tabs::-webkit-scrollbar-button{
+	visibility:hidden;
+	height:0px;
+}
+#tabs::-webkit-scrollbar-thumb{
+	background-color:var(--yellow);
+	width:4px;
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
+	border-radius: 10px;
 }
 
 /* Blog Page
